UI Improvements: dark mode fixes, clearer hover styles, disable dropdowns, and responsive design table (#1024)
* update dropdown hovers, tech icons, gradients,

* improve darmode

* update color contrast darkmode

* fix css and html linting

* disable dropdowns in html

* disable category dropdowns until loaded

--- a/static/css/techreport/general.css
+++ b/static/css/techreport/general.css
@@ -39,7 +39,7 @@ strong {
 }
 
 :is(a, button, select):focus-visible {
-  outline: 1.5px solid var(--color-teal-dark);
+  outline: 1.5px solid var(--focus-default);
   outline-offset: 1.5px;
   border-radius: 3px;
 }
@@ -68,7 +68,7 @@ nav li:hover {
   padding: 1.5rem;
   background: var(--color-card-background);
   border-radius: var(--card-radius);
-  border: 1px solid var(--color-card-border-light);
+  border: 1px solid var(--color-card-border);
   box-shadow: var(--card-shadow);
   transition: padding 0.35s;
 }
@@ -124,6 +124,7 @@ nav li:hover {
   width: 25rem;
   max-width: 100vw;
   position: relative;
+  border-right: 1px solid var(--color-card-border);
 }
 
 .split-view:has(.filters.hidden) .page-content {
